--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-react-app",
+  "name": "react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://d-tysh.github.io/my-react-app/",
+  "homepage": "https://d-tysh.github.io/react-hw-02-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
